# smart-heatpump-iot

./: README.md  heatpump.py  pyproject.toml
dashboard/: .prettierrc  package-lock.json  package.json  tailwind.config.js
dashboard/src/: app.css
dashboard/src/components/: TimeSeriesChart.svelte
dashboard/src/routes/: +layout.svelte  +page.svelte
heatpump/src/heatpump/data/: heatpumps.sqlite
landing-page/: package.json  postcss.config.js
landing-page/src/: app.css  app.html
landing-page/src/components/: Button.svelte  CTA.svelte  Features.svelte  Footer.svelte  Hero.svelte  Navbar.svelte  ToggleTheme.svelte
landing-page/src/lib/stores/: theme.svelte.js
landing-page/src/routes/: +layout.svelte  +page.svelte
landing-page/src/routes/llms.txt/: +server.js
landing-page/src/routes/privacy/: +page.svelte
landing-page/src/routes/robots.txt/: +server.js
landing-page/src/routes/sitemap.xml/: +server.js
landing-page/src/routes/waitlist/: +page.svelte
landing-page/static/: llms.txt.bak
